upd - dataset conversion

--- a/notebook/convert.ipynb
+++ b/notebook/convert.ipynb
@@ -2,12 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e1a7e6cb50442bc9e11a028a2f43739",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import json\n",
     "import time\n",
+    "import torch\n",
     "import pprint\n",
     "import mdtraj\n",
     "import random\n",
@@ -23,12 +37,13 @@
     "from openmm.app import *\n",
     "from openmm.unit import *\n",
     "from matplotlib.colors import LogNorm\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from torch.utils.data import Dataset\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,37 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading trajectory...\n"
+      "Loading trajectory...\n",
+      "Done.!!\n"
      ]
-    }
-   ],
-   "source": [
-    "print(\"Loading trajectory...\")\n",
-    "result_dir = f\"../log/{molecule}/{temperature}/{state}\"\n",
-    "pdb_file = f\"../data/{molecule}/{state}.pdb\"\n",
-    "loaded_traj = mdtraj.load(\n",
-    "    f\"{result_dir}/traj.dcd\",\n",
-    "    top=pdb_file\n",
-    ")\n",
-    "print(\"Done.!!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa48fbb537b4439191ddf36049d4bad6",
+       "model_id": "f6a3576be569483e910eecdb2d616ace",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,84 +81,153 @@
     }
    ],
    "source": [
+    "print(\"Loading trajectory...\")\n",
+    "result_dir = f\"../log/{molecule}/{temperature}/{state}\"\n",
+    "pdb_file = f\"../data/{molecule}/{state}.pdb\"\n",
+    "loaded_traj = mdtraj.load(\n",
+    "    f\"{result_dir}/traj.dcd\",\n",
+    "    top=pdb_file\n",
+    ")\n",
+    "print(\"Done.!!\")\n",
     "nglview.show_mdtraj(loaded_traj)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1.9251467 , 0.33686376, 2.0095022 , 1.8852602 , 0.30506766,\n",
-       "       2.10583   , 1.9668578 , 0.28511086, 2.1752892 , 1.8254464 ,\n",
-       "       0.21490505, 2.09264   , 1.7976315 , 0.4145095 , 2.1622887 ,\n",
-       "       1.6811711 , 0.39091924, 2.1916711 , 1.8539908 , 0.53419954,\n",
-       "       2.1766272 , 1.9493366 , 0.54697126, 2.1458533 , 1.7846247 ,\n",
-       "       0.6535812 , 2.225099  , 1.6778389 , 0.6428118 , 2.2060776 ,\n",
-       "       1.805755  , 0.66493624, 2.376821  , 1.7542562 , 0.7530244 ,\n",
-       "       2.4151533 , 1.9121256 , 0.6734833 , 2.3990304 , 1.7656511 ,\n",
-       "       0.5765028 , 2.4263413 , 1.8330296 , 0.77973044, 2.151028  ,\n",
-       "       1.9446181 , 0.7826524 , 2.0991845 , 1.7491263 , 0.8840896 ,\n",
-       "       2.1472478 , 1.6595843 , 0.87434274, 2.1929452 , 1.7782176 ,\n",
-       "       1.010298  , 2.0793736 , 1.6877451 , 1.0705229 , 2.071085  ,\n",
-       "       1.8537565 , 1.0658406 , 2.1349602 , 1.8166485 , 0.99014705,\n",
-       "       1.9793837 ], dtype=float32)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> Loaded config\n",
+      "{'config': 'config/alanine/debug.json',\n",
+      " 'force_field': 'amber99',\n",
+      " 'freq_csv': 1000,\n",
+      " 'freq_dcd': 1,\n",
+      " 'freq_stdout': 10000,\n",
+      " 'molecule': 'alanine',\n",
+      " 'platform': 'OpenCL',\n",
+      " 'precision': 'mixed',\n",
+      " 'solvent': 'tip3p',\n",
+      " 'state': 'c5',\n",
+      " 'temperature': 300.0,\n",
+      " 'time': 100000000}\n"
+     ]
     }
    ],
    "source": [
-    "loaded_traj[0].xyz.reshape(-1)"
+    "arg_file = f\"{result_dir}/args.json\"\n",
+    "\n",
+    "with open(arg_file, 'r') as f:\n",
+    "\tconfig = json.load(f)\n",
+    "\tprint(\">> Loaded config\")\n",
+    "\tpprint.pprint(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MD_Dataset(Dataset):\n",
+    "    def __init__(self, traj, config):\n",
+    "        self.molecule = config['molecule']\n",
+    "        self.state = config['state']\n",
+    "        self.temperature = config['temperature']\n",
+    "        self.time = config['time']\n",
+    "        self.force_field = config['force_field']\n",
+    "        self.solvent = config['solvent']\n",
+    "        self.platform = config['platform']\n",
+    "        self.precision = config['precision']\n",
+    "        \n",
+    "        data_x_list = []\n",
+    "        data_y_list = []\n",
+    "        for t in tqdm(\n",
+    "            # range(self.time -1),\n",
+    "            range(100 - 1),\n",
+    "            desc=\"Loading data\"\n",
+    "        ):\n",
+    "            current_state = torch.tensor(loaded_traj[t].xyz.squeeze())\n",
+    "            next_state = torch.tensor(loaded_traj[t+1].xyz.squeeze())\n",
+    "            data_x_list.append(current_state)\n",
+    "            data_y_list.append(next_state)\n",
+    "        self.x = torch.stack(data_x_list)\n",
+    "        self.y = torch.stack(data_y_list)\n",
+    "        \n",
+    "        self.sanity_check(loaded_traj)\n",
+    "    \n",
+    "    def sanity_check(self, loaded_traj):\n",
+    "        print(\"Running sanity check...\")\n",
+    "        print(f\">> x size: {self.x.shape}\")\n",
+    "        print(f\">> y size: {self.y.shape}\")\n",
+    "        for t in tqdm(\n",
+    "            # range(self.time -1),\n",
+    "            range(100 - 1),\n",
+    "            desc=\"Sanity check\"\n",
+    "        ):\n",
+    "            x = self.x[t]\n",
+    "            y = self.y[t]\n",
+    "            x_frame = torch.tensor(loaded_traj[t].xyz.squeeze())\n",
+    "            y_frame = torch.tensor(loaded_traj[t+1].xyz.squeeze())\n",
+    "            \n",
+    "            assert torch.equal(x, x_frame), f\"Frame {t}, x not equal\"\n",
+    "            assert torch.equal(y, y_frame), f\"Frame {t+1}, y not equal\"        \n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "\t    return self.x[index], self.y[index]\n",
+    " \n",
+    "    def __len__(self):\n",
+    "\t    return self.x.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5563f1b2f7c04f6c92e4c0774df15bb1",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "array([[[1.9251467 , 0.33686376, 2.0095022 ],\n",
-       "        [1.8852602 , 0.30506766, 2.10583   ],\n",
-       "        [1.9668578 , 0.28511086, 2.1752892 ],\n",
-       "        [1.8254464 , 0.21490505, 2.09264   ],\n",
-       "        [1.7976315 , 0.4145095 , 2.1622887 ],\n",
-       "        [1.6811711 , 0.39091924, 2.1916711 ],\n",
-       "        [1.8539908 , 0.53419954, 2.1766272 ],\n",
-       "        [1.9493366 , 0.54697126, 2.1458533 ],\n",
-       "        [1.7846247 , 0.6535812 , 2.225099  ],\n",
-       "        [1.6778389 , 0.6428118 , 2.2060776 ],\n",
-       "        [1.805755  , 0.66493624, 2.376821  ],\n",
-       "        [1.7542562 , 0.7530244 , 2.4151533 ],\n",
-       "        [1.9121256 , 0.6734833 , 2.3990304 ],\n",
-       "        [1.7656511 , 0.5765028 , 2.4263413 ],\n",
-       "        [1.8330296 , 0.77973044, 2.151028  ],\n",
-       "        [1.9446181 , 0.7826524 , 2.0991845 ],\n",
-       "        [1.7491263 , 0.8840896 , 2.1472478 ],\n",
-       "        [1.6595843 , 0.87434274, 2.1929452 ],\n",
-       "        [1.7782176 , 1.010298  , 2.0793736 ],\n",
-       "        [1.6877451 , 1.0705229 , 2.071085  ],\n",
-       "        [1.8537565 , 1.0658406 , 2.1349602 ],\n",
-       "        [1.8166485 , 0.99014705, 1.9793837 ]]], dtype=float32)"
+       "Loading data:   0%|          | 0/99 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sanity check...\n",
+      ">> x size: torch.Size([99, 22, 3])\n",
+      ">> y size: torch.Size([99, 22, 3])\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57ca2ea309f148299d722e6071ac0b89",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity check:   0%|          | 0/99 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "time_horizon = 10\n",
-    "for i in range(time_horizon):\n",
-    "\tcurrent_state = loaded_traj[i].xyz.reshape(-1)\n",
-    "\tnext_state = loaded_traj[i+1].xyz.reshape(-1)"
+    "dataset = MD_Dataset(loaded_traj, config)\n"
    ]
   },
   {
