upd - dataset generation

--- a/notebook/convert.ipynb
+++ b/notebook/convert.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e1a7e6cb50442bc9e11a028a2f43739",
+       "model_id": "460f8a8204ef4efa9a7e6bb7434ea41d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "molecule = \"alanine\"\n",
-    "temperature = \"300.0\"\n",
+    "temperature = \"273.0\"\n",
     "state = \"c5\""
    ]
   },
@@ -68,12 +68,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6a3576be569483e910eecdb2d616ace",
+       "model_id": "949b63dfd3d946e8902d1e86fd665cfc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "NGLWidget(max_frame=99999999)"
+       "NGLWidget(max_frame=99)"
       ]
      },
      "metadata": {},
@@ -107,13 +107,16 @@
       " 'freq_csv': 1000,\n",
       " 'freq_dcd': 1,\n",
       " 'freq_stdout': 10000,\n",
+      " 'log_csv': True,\n",
+      " 'log_dcd': True,\n",
+      " 'log_stdout': False,\n",
       " 'molecule': 'alanine',\n",
       " 'platform': 'OpenCL',\n",
       " 'precision': 'mixed',\n",
       " 'solvent': 'tip3p',\n",
       " 'state': 'c5',\n",
-      " 'temperature': 300.0,\n",
-      " 'time': 100000000}\n"
+      " 'temperature': 273.0,\n",
+      " 'time': 100}\n"
      ]
     }
    ],
@@ -128,12 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MD_Dataset(Dataset):\n",
-    "    def __init__(self, traj, config):\n",
+    "    def __init__(self, loaded_traj, config):\n",
     "        self.molecule = config['molecule']\n",
     "        self.state = config['state']\n",
     "        self.temperature = config['temperature']\n",
@@ -142,39 +145,22 @@
     "        self.solvent = config['solvent']\n",
     "        self.platform = config['platform']\n",
     "        self.precision = config['precision']\n",
+    "        self.device = \"cuda\"\n",
     "        \n",
     "        data_x_list = []\n",
     "        data_y_list = []\n",
+    "        print(traj.shape)\n",
     "        for t in tqdm(\n",
-    "            # range(self.time -1),\n",
-    "            range(100 - 1),\n",
+    "            range(self.time -1),\n",
     "            desc=\"Loading data\"\n",
     "        ):\n",
-    "            current_state = torch.tensor(loaded_traj[t].xyz.squeeze())\n",
-    "            next_state = torch.tensor(loaded_traj[t+1].xyz.squeeze())\n",
-    "            data_x_list.append(current_state)\n",
-    "            data_y_list.append(next_state)\n",
-    "        self.x = torch.stack(data_x_list)\n",
-    "        self.y = torch.stack(data_y_list)\n",
+    "            # current_state = torch.tensor(loaded_traj[t].xyz.squeeze()).to(self.device)\n",
+    "            # next_state = torch.tensor(loaded_traj[t+1].xyz.squeeze()).to(self.device)\n",
+    "            data_x_list.append(traj[t])\n",
+    "            data_y_list.append(traj[t+1])\n",
+    "        self.x = torch.stack(data_x_list).to(self.device)\n",
+    "        self.y = torch.stack(data_y_list).to(self.device)\n",
     "        \n",
-    "        self.sanity_check(loaded_traj)\n",
-    "    \n",
-    "    def sanity_check(self, loaded_traj):\n",
-    "        print(\"Running sanity check...\")\n",
-    "        print(f\">> x size: {self.x.shape}\")\n",
-    "        print(f\">> y size: {self.y.shape}\")\n",
-    "        for t in tqdm(\n",
-    "            # range(self.time -1),\n",
-    "            range(100 - 1),\n",
-    "            desc=\"Sanity check\"\n",
-    "        ):\n",
-    "            x = self.x[t]\n",
-    "            y = self.y[t]\n",
-    "            x_frame = torch.tensor(loaded_traj[t].xyz.squeeze())\n",
-    "            y_frame = torch.tensor(loaded_traj[t+1].xyz.squeeze())\n",
-    "            \n",
-    "            assert torch.equal(x, x_frame), f\"Frame {t}, x not equal\"\n",
-    "            assert torch.equal(y, y_frame), f\"Frame {t+1}, y not equal\"        \n",
     "\n",
     "    def __getitem__(self, index):\n",
     "\t    return self.x[index], self.y[index]\n",
@@ -185,41 +171,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5563f1b2f7c04f6c92e4c0774df15bb1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading data:   0%|          | 0/99 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running sanity check...\n",
-      ">> x size: torch.Size([99, 22, 3])\n",
-      ">> y size: torch.Size([99, 22, 3])\n"
+      "torch.Size([100, 22, 3])\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57ca2ea309f148299d722e6071ac0b89",
+       "model_id": "daa5bb1910f64b909c9d0f427fab4545",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Sanity check:   0%|          | 0/99 [00:00<?, ?it/s]"
+       "Loading data:   0%|          | 0/99 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
