upd - dihedral angles settings

--- a/notebook/set_dihedral.ipynb
+++ b/notebook/set_dihedral.ipynb
@@ -9,22 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "127e69f4528a4a46b8ff07800a41820b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rdkit import Chem\n",
     "from rdkit.Chem import AllChem, rdMolTransforms\n",
@@ -32,7 +19,31 @@
     "\n",
     "import numpy as np\n",
     "import mdtraj as md\n",
-    "import nglview as nv"
+    "import nglview as nv\n",
+    "\n",
+    "from openmm import *\n",
+    "from openmm.app import *\n",
+    "from openmm.unit import *\n",
+    "\n",
+    "IMAGE_SIZE = \"400px\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_two_dihedral(pdb_file):\n",
+    "\ttraj = md.load(pdb_file)\n",
+    "\tindices_psi = [psi_idx1, psi_idx2, psi_idx3, psi_idx4]\n",
+    "\tindices_phi = [phi_idx1, phi_idx2, phi_idx3, phi_idx4]\n",
+    "\tpsi= md.compute_dihedrals(traj, [indices_psi])[0][0] * 180 / np.pi\n",
+    "\tphi = md.compute_dihedrals(traj, [indices_phi])[0][0] * 180 / np.pi\n",
+    "\n",
+    "\tprint(\"<--- Dihedrals from PDB file --->\")\n",
+    "\tprint(f\"{phi:.2f}, {psi:.2f}\")\n",
+    "\tprint(\"<----------------------------------------->\")"
    ]
   },
   {
@@ -44,13 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "psi_idx1, psi_idx2, psi_idx3, psi_idx4 = 10, 8, 14, 16\n",
     "phi_idx1, phi_idx2, phi_idx3, phi_idx4 = 4, 6, 8, 10\n",
     "backbone_color = \"#D55E00\"\n",
+    "state = \"c5\"\n",
     "\n",
     "def set_dihedral(mol, idx_1, idx2, idx3, idx4, angle):\n",
     "    conf = mol.GetConformer()\n",
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -67,14 +79,14 @@
      "output_type": "stream",
      "text": [
       "<--- Dihedrals from PDB file --->\n",
-      "-146.78, 173.78\n",
+      "93.32, -85.61\n",
       "<----------------------------------------->\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62cd61280c104c5d93d9583b2bf27f8a",
+       "model_id": "812e46def521433eb1e3aec649afb3e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +116,14 @@
      "output_type": "stream",
      "text": [
       "<--- Dihedrals from PDB file --->\n",
-      "-146.78, 173.78\n",
+      "93.32, -85.61\n",
       "<----------------------------------------->\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72444bf220104dbb970e017432263ec2",
+       "model_id": "90d49b83482945d4b6c8db64b0938316",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +170,7 @@
      "output_type": "stream",
      "text": [
       "<--- Original dihedrals --->\n",
-      "94.56, 123.68\n",
+      "93.32, -85.61\n",
       "<-------------------------->\n",
       "\n"
      ]
@@ -174,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -218,35 +230,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Atom 0: 19.745, 3.573, 20.603\n",
-      "Atom 1: 18.882, 3.072, 21.04\n",
-      "Atom 2: 19.299, 2.583, 21.92\n",
-      "Atom 3: 18.428, 2.368, 20.342\n",
-      "Atom 4: 17.901, 4.069, 21.635\n",
-      "Atom 5: 16.732, 3.819, 21.87\n",
-      "Atom 6: 18.376, 5.305, 21.721\n",
-      "Atom 7: 19.385, 5.264, 21.729\n",
-      "Atom 8: 17.741, 6.537, 22.185\n",
-      "Atom 9: 17.04582488778243, 6.860574117251084, 21.409641145018337\n",
-      "Atom 10: 17.101120491921613, 6.202076661058641, 23.57657988350426\n",
-      "Atom 11: 16.56331230751283, 7.0671029879260585, 23.96465179772789\n",
-      "Atom 12: 17.85175336122965, 5.933642521668906, 24.320331460527445\n",
-      "Atom 13: 16.371516132385626, 5.394874726206394, 23.52348077883317\n",
-      "Atom 14: 18.752791579928797, 7.710707186552709, 22.379160343581574\n",
-      "Atom 15: 19.85446779776069, 7.474045937370982, 22.784532967471435\n",
-      "Atom 16: 18.39058121839234, 8.91930803126931, 22.06786040438155\n",
-      "Atom 17: 17.44791636439163, 8.949410885637358, 21.70390052858379\n",
-      "Atom 18: 19.2636886248424, 10.012599042705943, 21.86996088160822\n",
-      "Atom 19: 19.082712682421345, 10.524774717851002, 20.92535843292702\n",
-      "Atom 20: 19.20235891785639, 10.74850199885164, 22.671840864010218\n",
-      "Atom 21: 20.258520298068348, 9.566081554867388, 21.880356794305182\n"
+      "Atom 0: 19.185, 3.272, 20.062\n",
+      "Atom 1: 18.852, 3.056, 21.077\n",
+      "Atom 2: 19.711, 2.965, 21.742\n",
+      "Atom 3: 18.267, 2.137, 21.094\n",
+      "Atom 4: 17.969, 4.173, 21.58\n",
+      "Atom 5: 16.799, 3.94, 21.826\n",
+      "Atom 6: 18.542, 5.357, 21.737\n",
+      "Atom 7: 19.537, 5.432, 21.581\n",
+      "Atom 8: 17.848, 6.546, 22.226\n",
+      "Atom 9: 17.09756132758726, 6.852064359868748, 21.49716572078041\n",
+      "Atom 10: 17.104457306714668, 6.156572053927912, 23.515644578199772\n",
+      "Atom 11: 16.620711580730383, 7.021886679171729, 23.96907888648609\n",
+      "Atom 12: 17.82945249643519, 5.77652084395224, 24.235336910157066\n",
+      "Atom 13: 16.373910463213942, 5.374443775357836, 23.31064051650308\n",
+      "Atom 14: 18.819743293490873, 7.721629145376829, 22.437811435234394\n",
+      "Atom 15: 19.901983123709584, 7.537383843043366, 22.981407441893953\n",
+      "Atom 16: 18.395608588855936, 8.931008271684306, 22.054487967160764\n",
+      "Atom 17: 17.46756225782772, 9.004583808774756, 21.664510214196678\n",
+      "Atom 18: 19.191052964797716, 10.145871712334174, 22.213494461855046\n",
+      "Atom 19: 18.666730212077976, 10.993092103222263, 21.771729524084034\n",
+      "Atom 20: 19.393941941223833, 10.332853226210455, 23.268395394034602\n",
+      "Atom 21: 20.127300442124707, 10.028368426076778, 21.668231553784494\n"
      ]
     }
    ],
@@ -263,34 +275,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize"
+    "## Stabilize?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMAGE_SIZE = \"400px\""
+    "start_pdb = PDBFile(f'./aldp_{new_phi:.1f}_{new_psi:.1f}.pdb') \n",
+    "forcefield_files = [\"amber99sbildn.xml\", \"tip3p.xml\"]\n",
+    "platform = Platform.getPlatformByName('OpenCL')\n",
+    "properties = {'Precision': \"mixed\"}\n",
+    "forcefield = ForceField(*forcefield_files)\n",
+    "system = forcefield.createSystem(\n",
+    "\tstart_pdb.topology,\n",
+    "\tnonbondedCutoff=3 * nanometer,\n",
+    "\tconstraints=HBonds\n",
+    ")\n",
+    "integrator = LangevinIntegrator(\n",
+    "\t300.0 * kelvin,\n",
+    "\t1 / picosecond,\n",
+    "\t1 * femtoseconds\n",
+    ")\n",
+    "\n",
+    "# Create simulation\n",
+    "simulation = Simulation(\n",
+    "\tstart_pdb.topology,\n",
+    "\tsystem,\n",
+    "\tintegrator,\n",
+    "\tplatform,\n",
+    "\tproperties\n",
+    ")\n",
+    "simulation.context.setPositions(start_pdb.positions)\n",
+    "simulation.minimizeEnergy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos = simulation.context.getState(getPositions=True).getPositions(asNumpy=True).value_in_unit(nanometer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PHI_ANGLE = [4, 6, 8, 10]\n",
+    "PSI_ANGLE = [10, 8, 14, 16]\n",
+    "\n",
+    "def dihedral(p):\n",
+    "\tif not isinstance(p, np.ndarray):\n",
+    "\t\tp = p.numpy()\n",
+    "\tb = p[:-1] - p[1:]\n",
+    "\tb[0] *= -1\n",
+    "\tv = np.array([v - (v.dot(b[1]) / b[1].dot(b[1])) * b[1] for v in [b[0], b[2]]])\n",
+    "\t\n",
+    "\t# Normalize vectors\n",
+    "\tv /= np.sqrt(np.einsum('...i,...i', v, v)).reshape(-1, 1)\n",
+    "\tb1 = b[1] / np.linalg.norm(b[1])\n",
+    "\tx = np.dot(v[0], v[1])\n",
+    "\tm = np.cross(v[0], b1)\n",
+    "\ty = np.dot(m, v[1])\n",
+    "\t\n",
+    "\treturn np.arctan2(y, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.79786448, 0.4200381 , 2.13347443],\n",
+       "       [1.85466402, 0.52240299, 2.19679689],\n",
+       "       [1.7867237 , 0.6477775 , 2.22969651],\n",
+       "       [1.71866056, 0.63268377, 2.36655498]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(pos)\n",
+    "pos[PHI_ANGLE]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.27302503278705\n",
+      "-78.18392679801467\n"
+     ]
+    }
+   ],
    "source": [
-    "def compute_two_dihedral(pdb_file):\n",
-    "\ttraj = md.load(pdb_file)\n",
-    "\tindices_psi = [psi_idx1, psi_idx2, psi_idx3, psi_idx4]\n",
-    "\tindices_phi = [phi_idx1, phi_idx2, phi_idx3, phi_idx4]\n",
-    "\tpsi= md.compute_dihedrals(traj, [indices_psi])[0][0] * 180 / np.pi\n",
-    "\tphi = md.compute_dihedrals(traj, [indices_phi])[0][0] * 180 / np.pi\n",
-    "\n",
-    "\tprint(\"<--- Dihedrals from PDB file --->\")\n",
-    "\tprint(f\"{phi:.2f}, {psi:.2f}\")\n",
-    "\tprint(\"<----------------------------------------->\")"
+    "print(dihedral(pos[PHI_ANGLE]) * 180 / np.pi)\n",
+    "print(dihedral(pos[PSI_ANGLE]) * 180 / np.pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize"
    ]
   },
   {
